# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-02-02 16:09:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-163

    Summary:
      fix the credits in the changes file (igraph by Luis)
    Revision:
      itools--main--0.12--patch-163


    modified files:
     CHANGES.txt Changelog


2006-02-02 16:04:06 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-162

    Summary:
      get ready to release 0.12.3
    Revision:
      itools--main--0.12--patch-162


    modified files:
     CHANGES.txt Changelog setup.py


2006-02-02 15:48:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-161

    Summary:
      scripts, rename "itaapyTools_classDiagram" to "igraph" (#219)
    Revision:
      itools--main--0.12--patch-161


    modified files:
     Changelog setup.py

    renamed files:
     scripts/.arch-ids/itaapyTools_classDiagram.py.id
       ==> scripts/.arch-ids/igraph.py.id
     scripts/.arch-ids/test_classDiagram.py.id
       ==> scripts/.arch-ids/test_igraph.py.id
     scripts/itaapyTools_classDiagram.py
       ==> scripts/igraph.py
     scripts/test_classDiagram.py
       ==> scripts/test_igraph.py


2006-02-02 14:19:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-160

    Summary:
      web.server, catch exceptions in the "get_method" block
    Revision:
      itools--main--0.12--patch-160


    modified files:
     Changelog web/server.py


2006-02-02 13:15:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-159

    Summary:
      cms, fix user profile template (it is a content template)
    Revision:
      itools--main--0.12--patch-159


    modified files:
     Changelog cms/ui/User_profile.xml.en


2006-01-31 15:29:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-158

    Summary:
      web.server, catch exceptions in the commit phase
    Revision:
      itools--main--0.12--patch-158

    Instead of failing silently.

    modified files:
     Changelog web/server.py

